--- a/pom.xml
+++ b/pom.xml
@@ -37,13 +37,16 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
+        <!-- Must include ONLY one of "quarkus-resteasy-reactive" or "quarkus-resteasy",
+              not both. Same wrt "quarkus-resteasy-reactive-jackson vs quarkus-resteasy-jackson".
+          -->
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-resteasy</artifactId>
+            <artifactId>quarkus-resteasy-reactive</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-resteasy-jackson</artifactId>
+            <artifactId>quarkus-resteasy-reactive-jackson</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
